[post] Add remaining info on APS

--- a/_posts/programming/qnx/2022-04-17-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-17-qnx-aps.md
@@ -11,11 +11,9 @@ Though a lot of the information is just based on the QNX documentation all put i
 with examples and referencing other publically available resources (i.e. foundary27, papers, blogs, and 
 what I found from playing around with APS). This page will not go through how to use APS through the 
 Momentics IDE nor will it cover the various C API's to configure the partition. There's already a lot 
-to cover, so the C API's will be covered in another blog post (provided I can muster enough willpower 
-to finish my research and code examples before my 30-day QNX trial license expires i.e. the University 
-rejected my application for a QNX license and QNX has not gotten back to me about my request for an 
-education license - though I think there was a glitch since the website was behaving weirdly when 
-I request it so they may not have received my request).
+to cover, so the C API's will be potentially covered in another blog post (provided I can muster enough willpower 
+to request and pester QNX for either an educational license or a 30-day trial since I no longer have access 
+to a valid QNX license)
 
 ![Pikachu doing construction](https://64.media.tumblr.com/f0da7c50d726e64c6c0d8a985240b6f4/dfbbb68a95adf2d4-ce/s1280x1920/12d1e09ee5340b82fe8204c83ee6107595bc9202.gifv)
 ![Pikachu placing construction pylons](https://thumbs.gfycat.com/ParallelQuerulousCottontail.webp)
@@ -25,11 +23,20 @@ I request it so they may not have received my request).
 <ol>
 <li><a href = "#rlimit">Constraining a Single Process</a></li>
 <li><a href = "#cgroups">Constraining Group of Processes</a></li>
-<li><a href = "#child-1">Partition of a Child Process</a></li>
+<li><a href = "#aps-child-1">Partition of a Child Process</a></li>
 <li><a href = "#create-partition">Creating a Partition</a></li>
 <li><a href = "#aps-action">APS In Action</a></li>
 <li><a href = "#lose-control">Lose Control</a></li>
 <li><a href = "#add-check">Add and Check Processes's Partitions</a></li>
+<li><a href = "#loads">Scheduling Behavior During Different Loads</a></li>
+<li><a href = "#critical">Critical Threads</a></li>
+<li><a href = "#bankruptcy">Bankruptcy</a></li>
+<li><a href = "#window">Averaging /Sliding Window</a></li>
+<li><a href = "#payback">Payback - Nothing is Free</a></li>
+<li><a href = "#microbilling">Microbilling</a></li>
+<li><a href = "#inherit">Inheritance</a></li>
+<li><a href = "#facts">Random Facts</a></li>
+<li><a href = "#resources">Resources</a></li>
 </ol>
 
 </details>
@@ -502,32 +509,147 @@ There are three ways to handle bankruptcy:
     * need to restore critical budget if you want to use critical CPU time (i.e. `aps modify -B` or `SCHED_APS_MODIFY_PARTITION` command to the `SchedCtl()`)
 3. **Reboot:** system crash with offending partition (should be used for testing purposes only)
 
+I like to view the 3 bankruptcy policies as the following:
+1. **Basic:** Notify the public that the company is bankrupt and will not be doing business for some time till the company does some restructuring.
+2. **Cancel:** Cancel all new projects and research since the company is low in cash. Once money is injected to the company, it will not be working on anything new.
+3. **Reboot:** Business crashed and was forced to shutdown all operations.
+
 Similarly to how poor business decisions can lead companies to bankruptcy, if a bankruptcy occurs, it is considered the design error of the application.
 
+![A gif demo showing a reboot bankrupt policy](../assets/programming/qnx/aps-bankruptcy.gif)
+<p class = "caption">An example of bankrupting a partition using the reboot policy</p>
+
+
+<a name = "window"/>                                                        
+<br/>                                                                           
+                                                                                
+---                                                                             
+                                                                                
+## Averaging/Sliding Window
+                                                                                
+---     
+
+So far, we have covered the following:
+* what resource constraint QNX provides
+* What APS is
+* How to create a partition
+* How to start/move a thread in/into a partition
+* Partition scheduling under different resource state (i.e. underload and overload)
+* What bankruptcies are
+
+But the underlying mechanism for most of the topics covered rely on a single concept that I have been omitting which is 
+how the scheduler calculates the average CPU usage and what does it mean to use some percent of the CPU time. If a partition is 
+reported to use 1% of the CPU, what does that roughly translate in terms of a unit of time? How often does the CPU usage get 
+updated? These are the types of questions one may have asked during this tutorial on APS.
+
+In QNX, the scheduler calculates the average CPU usage over some interval of time called a **time window** whose value is called the **window size**. 
+The average CPU time is calculated after some unit of time which is typically after each tick or 1ms. The default window size is 100ms meaning the time reported 
+by APS is the average CPU usage from the past 100ms. The scheduler keeps a track of the usage history over ther duration of the window allowing us to 
+know how much each partition consumed in the past 100ms (or whatever the window size is).
+
+![QNX Averaging window from the QNX documentation](../assets/programming/qnx/aps-sliding-window.png)
+<p class = "caption">Taken from the <a href = "https://www.qnx.com/developers/docs/7.0.0/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/aps_details_Keeping_track_.html">QNX documentation</a></p>
+
+The reason why you may see the averaging window be referred as a sliding window is because the window moves forward as time advances.
+The implication is that the oldest time slot in the window gets overwritten meaning the scheduler never remembers anything older than its window size.
+
+So if our window size is 100ms and a partition is reporting a CPU usage of 1%, then the partition has been using about 1ms of the CPU time in the past 100ms. 
+The window size can be changed using the `aps` utility with the `-w` option. 
+
+<details class = "note-body">
+<summary class = "note">The window size can be from 8ms-400ms but making the window size too small or large does have consequences. Refer to the QNX documentation for more information</summary>
+<ul>
+<li><a href = "https://www.qnx.com/developers/docs/7.0.0/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/system_Accuracy_.html">Accuracy</a></li>
+<li><a href = "https://www.qnx.com/developers/docs/7.0.0/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/system_Delays_.html">Delays</a></li>
+</ul>
+</details>
+
+<a name = "payback"/>                                                        
+<br/>                                                                           
+                                                                                
+---                                                                             
+                                                                                
+## Payback - Nothing is Free
+                                                                                
+---    
+
+Now that we understand how the scheduler keeps track of the CPU usage via the averaging time window, 
+we can go over another detail that I omitted previously. Recall that unused CPU from a sleeping partition 
+(i.e. a partition that has no ready threads) has their CPU runtime distributed to other active partitions 
+to avoid wasting unused CPU time. This behavior can be seen as lending CPU time to other partitions meaning 
+it needs to be "repaid" eventually. Recall that partitions only borrow CPU time from other partitions if 
+the partition has consumed all of its available CPU time (i.e. budget).
+
+What would happen if a sleeping partition wakes up? The scheduler still needs to ensure that the partition 
+get its "guaranteed" CPU time. So any partitions that have borrowed time from the sleeping partition will 
+need to repay back by yielding it CPU time to the once sleeping partition. This is done by the scheduler 
+who keeps track of the CPU usage from the past window size. Recall how the averaging time window only 
+tracks the past [window size]ms of CPU activity. This means that the scheduler is not great at 
+memorizing the debt of other partitions so partitions does not need to repay its entire debt, only 
+the debt the scheduler recalls. Too bad this does not apply to real life.
+
+A consequence of this feature where unused CPU is lended to other partitions is that it can raise latency 
+(i.e. response time). This may not be ideal in a realtime operating system where the processes need to 
+be executed with strict realtime needs. For instance, a higher priority thread may be forced to 
+wait for a long time since the partition needs to repay part of its debt. So as system designers, 
+you need to consider whether or not this feature should be utilized or not. Forcing a maximum CPU 
+time can be used to disable this feature. A group of Engineers at Bosch has written a [nice paper](https://www.researchgate.net/publication/353094266_Brief_Industry_Paper_Dissecting_the_QNX_Adaptive_Partitioning_Scheduler)
+that explains various issues with APS that I encourage you to take a quick read on.
+
+<a name = "microbilling"/>                                                           
+<br/>                                                                           
+                                                                                
+---                                                                             
+                                                                                
+## Microbilling
+
+The billing of partitions by calculating the average time window on every tick or millisecond is not fine (detailed) enough so 
+QNX introduced a concept of **micro-billing**. I am going to be very brief on this topic and paste a quote I found from Foundary27 on this topic:
+
+> Micirobilling means accounting for the cpu time used by a thread to much finer resolution than the clock period between tick interrupts.
+> -- [Foundary27 - APS: How does it work](https://community.qnx.com/sf/wiki/do/viewPage/projects.core_os/wiki/APS_How_it_Works_FAQ)
+
+Essentially timestamps of when the threads enter and leave the RUNNING state are tracked and the difference between the two are charged to the thread. 
+                                                                                
+---     
+
+<a name = "inherit"/>                                                           
+<br/>                                                                           
+                                                                                
+---                                                                             
+                                                                                
+## Inheritance
+                                                                                
+---  
+
+Recall how I mentioned that a thread started on the shell (running on the System partition) will run on the System partition by default. This 
+was an example of how children inherit the parent's partition by default. But what about message handling? Does the client sending a message get billed 
+or will the server who recieves the message get billed for handling the message? By default, APS will bill the client if the client sends a message to 
+the server. So the time spent by the server to handle the client's message is not billed to the server but rather to the client. To achieve this, the server 
+will inherit the partition of the client temporarily to serve the client from my understanding. But the same cannot be said for pulses unfortunately. Pulses 
+are billed to the receiving end and not the client who sent the pulses.
+
+
+<a name = "facts"/>                                                           
+<br/>                                                                           
+                                                                                
+---                                                                             
+                                                                                
+## Random Facts 
+                                                                                
+--- 
+
+I will likely conclude my talk on APS by listing random facts about APS. This likely will be my last post on QNX unless I get another opportunity to fiddle with QNX 
+(i.e. QNX is not an open source OS so a license is required to fiddle around).
+
+* APS scheduling overhead increases with more partitions but **not** with the increase of threads
+* there is a maximum of 32 partitions
+* partitions cannot be deleted once created - The best approach to deactivate the partition is to set the budget and the max budget of the partition to 0%
+
+<a name = "resources"/>                                                           
+<br/>    
+
 ---
-
-* by default child processes/threads go into parent's partition by default
-* scheduling works as normal (highest priority thread gets the CPU time)
-
- You can use adaptive partitioning to make it easier to debug an embedded system by providing emergency access to it:
-
-    during development — create a partition and start io-pkt and qconn in it. Then, if a runaway process ties up the system, you can use the IDE to debug and query the system.
-    during deployment — create a partition and start io-pkt and inetd in it. If you encounter a problem, you can telnet into the system.
-
-In either case, if you don't need to use this partition, the thread scheduler allocates its budget among the other partitions. This provides you with emergency access to the system without compromising performance. 
-```
-Partition budgets are enforced only when the CPU is running to capacity. All available cycles are used if they are needed, but when processes in more than one partition compete for cycles, the partitioning enforces resource budgets and prevents resource starvation. 
-```
-* break used to be over 100% by playing around with the average time window
-* show bankruptcy policies
-* talk about security policies
-* how to use APS (setup, command line and programmatically)
-* check `/proc/<PID>/limits
-* check `schedctl`
-* https://web.archive.org/web/20200223060354/http://www.kalinskyassociates.com/Wpaper3.html - for use cases
-* partition inheritance (caveat: server and client)
-* scheduling at thread level
-* scheduler's overhead doesn't increase with more threads but may increase with the number of partitions
 
 ## Resources:
 * [Redhat - Resource Management](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/resource_management_guide/ch01)
