--- a/_posts/course-reviews/2022-01-01-math1152.md
+++ b/_posts/course-reviews/2022-01-01-math1152.md
@@ -2,7 +2,7 @@
 layout: review-math
 title: MATH1152 - Introductory Algebra 1
 description: A course review on Honors Math Linear Algebra 1 at CarletonU
-categories: [university, school, math, reviews, carletonU]
+categories: [university, school, math, reviews, carletonu]
 ---
 
 **TLDR:**
