--- a/_posts/course-reviews/2022-04-30-math2052.md
+++ b/_posts/course-reviews/2022-04-30-math2052.md
@@ -2,7 +2,7 @@
 layout: review-math
 title: MATH2052 - Calculus and Introductory Analysis II
 description: A course review on a Calculus course for Math honors students at CarletonU
-categories: [university, school, math, reviews, carletonU]
+categories: [university, school, math, reviews, carletonu]
 ---
 
 This is a course review of MATH2052 - Calculus and Introductory Analysis II taken at CarletonU in 
