--- a/_posts/course-reviews/2022-01-01-math1052.md
+++ b/_posts/course-reviews/2022-01-01-math1052.md
@@ -2,7 +2,7 @@
 layout: review-math
 title: MATH1052 - Calculus and Introductory Analysis 1
 description: A course review on a Calculus course for Math honors students at CarletonU
-categories: [university, school, math, reviews, carletonU]
+categories: [university, school, math, reviews, carletonu]
 ---
 
 **TLDR:**
