[#32] Upload missing image directory and fix summary and detail style to match dark theme

--- a/_posts/programming/qnx/2022-04-17-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-17-qnx-aps.md
@@ -5,7 +5,7 @@ description: A look into QNX APS feature
 categories: [programming, c/c++, aps, qnx]
 ---
 
-In preparation to my presentation on QNX APS (Adaptive Partitioning Scheduler), I decided to write 
+In preparation for my presentation on QNX APS (Adaptive Partitioning Scheduler), I decided to write 
 a blog that goes through what partitions are, how to control resources in QNX, and what APS are. 
 Though a lot of the information is just based on the QNX documentation all put into one page but 
 with examples and referencing other publically available resources (i.e. foundary27, papers, blogs, and 
