[#32] Add background to transparent gifs that have black fonts

--- a/_posts/programming/qnx/2022-04-17-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-17-qnx-aps.md
@@ -103,7 +103,7 @@ On QNX, the term partition is used to describe the controlled use of processor
 resources (i.e. processing time) that is isolated from other partitions ([Glossary](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.sys_arch/topic/glossary.html)). 
 Essentially you can divide CPU processing time in virtual objects called partitions where processes can be executed in and be guaranteed to have the CPU time specified in their configuration.
 
-![An image of 3 partitions being allocated 50%, 20% and 30% of resources respectively](http://www.qnx.com/developers/docs/7.1/com.qnx.doc.neutrino.sys_arch/images/static_partitions.png)
+<img alt = "An image of 3 partitions being allocated 50%, 20% and 30% of resources respectively" src = "http://www.qnx.com/developers/docs/7.1/com.qnx.doc.neutrino.sys_arch/images/static_partitions.png" class = "img-background"/>
 <p class = "caption">An excerpt from QNX Documentation</p>
 
 
