[update] Add bibtex as some useful tex commands

--- a/_posts/math-physics/2021-09-28-lab-tex.md
+++ b/_posts/math-physics/2021-09-28-lab-tex.md
@@ -6,7 +6,7 @@ categories: [tex, physics]
 ---
 
 I have just finished my first Physics lab in many years and it was quite more 
-time-consuming than I initially thought. Today's post will go over briefly a 
+time-consuming than I initially thought. This post will go over briefly a 
 few tex commands I found useful when writing my lab along with a link to my 
 Physics template that'll be subject to change as I write more and more labs.
 
@@ -426,6 +426,69 @@ To draw a reaction, using `mhchem` package is useful. For instance,
 Though the reaction arrow is quite long. There are ways to tweak it but I think 
 I'll keep using this package till I find a need to use another package or 
 method to draw the reaction. (i.e. I have yet to use this package for my labs).
+
+---
+
+## Citation Using BibTex
+
+Often times when writing reports, you need to reference outside knowledge or give acknowledgement of the idea or owner 
+to someone. That is where <a href = "http://www.bibtex.org/">BibTex</a> comes in handy. BibTex makes citation very simple 
+being able to convert your references in different styles very quickly (i.e. from APA to IEEE for instance). All you need to 
+do is provide a BibTex file (extension: **.bib**) that contains metadata to your references such as the one below:
+
+```bib
+@manual{lab,
+  title         = "Oscilloscope Experiment",
+  organization  = "Carleton University",
+  year          = "2022",
+  author        = "Maria Paula Rozo Martinez",
+},
+
+@manual{uncertainty,
+    title = "Measurements and Experimental Uncertainties",
+    organization = "Carleton University",
+    year = "2022",
+    author = "Etienne Rollin"
+}
+
+@misc{humidity,
+    title = "Static Electricity",
+    organization = "Airtec Solutions",
+    howpublished = {\url{https://airtecsolutions.com/blog/airtec-blog/airtec-blog/static-electricity}},
+    note = {Accessed: 2022-05-27}
+}
+
+@article{esd,
+    title = {THE ``REAL'' COST OF ESD DAMAGE},
+    author = {"Terry Welsher"},
+    journal = "InCompliance",
+    publisher = "publisher",
+    year = "2010",
+    month = "June"
+}
+```
+
+Then in your Tex File, you can add the following to indicate you wish to have your references generated using a specific 
+style (IEEE in this case) and the bibTex file to look at (i.e. `sample.bib`):
+
+```tex
+{\bibliographystyle{IEEEtran}
+\bibliography{sample}}
+```
+
+![An image of the references section being generated](../assets/math-physics/tex-references.png)
+
+### Intext Citation
+
+Intext citation is very simple using bibtex, all you need to use is the `\cite{}` command with the tag associated to the 
+reference you wish to cite.
+
+```tex
+While copper is a great metal due to its low resistivity, the weight and 
+cost of copper makes it non-economical for overhead power lines \cite{powerline}
+```
+
+![An image of how the in-text citation looks like using IEEE style](../assets/math-physics/tex-intext-cite.png)
 
 ---
 
