[edit] Fix links and add box tex package and stylization

--- a/_posts/course-reviews/2022-08-25-math2107.md
+++ b/_posts/course-reviews/2022-08-25-math2107.md
@@ -10,7 +10,7 @@ the summer of 2022. The course took a "reverse-style" classroom teaching where t
 pre-recorded and students were expected (but was optional) to attend lectures to solve problems 
 relating to the lectures. The tutorials were also in-person. The review will be split 
 into two main sections, a [long commentary about what the course is about](#desc) and 
-a section dedicated to [discussing the organization of the course](#org) and my overall thoughts about the course.
+a section dedicated to [reviewing and discussing the organization of the course](#review) and how I studied for the course.
 
 **TLDR:**
 * Less theoretical compared to MATH2152 that I was supposed to take
@@ -418,7 +418,7 @@ way to calculate the least squares method.
 
 <p class = "caption">Maybe a way to find the least squares. I am not sure but I'm too lazy to read this document. Taken without permission from PHYS1001 Errors Lab Handout</p>
 
-This topic may also be review (I recall learning about it but have no recollection on how till I encountered it again in MATH2107). This unit is very straightforward and the interesting thing about 
+This topic may also be review (I recall learning about it but have no recollection on what it is about till I encountered it again in MATH2107). This unit is very straightforward and the interesting thing about 
 this unit is learning how to find the least squares solution of different polynomials and functions. I only remember learning how to find the least squares line but it turns out that to find 
 the curve of least squares, it's just an extension to how one would find the least squares line which is very neat. The solution to the least squares is represented as $\hat{x}$ which can be quite 
 a bit of work to find using the usual method (i.e. $A^Tx = A^Tb$). Using the QR factorization learnt in the previous unit, the solution to the least squares can be determined by $\hat{x} = R^-1 Q^Tb$. For 
