[edit] Add a few extra details on how I studied

--- a/_posts/course-reviews/2022-08-25-math2107.md
+++ b/_posts/course-reviews/2022-08-25-math2107.md
@@ -5,6 +5,8 @@ description: A course review on Linear Algebra 2 taken at CarletonU
 categories: [university, school, math, reviews, carletonu]
 ---
 
+**last major edit:** 2022-11-29
+
 This is a course review of MATH2107 - Linear Algebra II taken at CarletonU in 
 the summer of 2022. The course took a "reverse-style" classroom teaching where the lectures were 
 pre-recorded and students were expected (but was optional) to attend lectures to solve problems 
@@ -663,5 +665,11 @@ or on a scratch paper the steps to answer the question with the formulas and mat
 Overall my experience with cue cards have been positive but the downside is that it consumes a lot of time to write cue cards. I do not think I will be using cue cards for my future courses aside from maybe writing 
 the definitions and theorems because it wouldn't be feasible to write cue cards when I am taking a full course load.
 
-
-
+As for how I studied in the course, I did the following:
+* Attempted most or all the weekly practice problems every week
+* attended office hours to ask questions to either the TA or to Kyle
+* rewrite course notes
+* write cue cards and test myself the day or two before the test if I had the general idea on how to approach the problem or knew my theory
+* try all the lecture bonus problems relating to the test the day
+* read over my course notes at least once before the test
+* avoid studying from the assignment questions, those questions are either long or difficult to be on the test
