[edit] Fix incorrect TeX commands and spelling

--- a/_posts/course-reviews/2022-08-25-math2107.md
+++ b/_posts/course-reviews/2022-08-25-math2107.md
@@ -324,7 +324,7 @@ and row reducing it. If there are pivots in all the columns after row reducing t
 the dots that non-singular matrix (matrices that reduce to the identity matrix) are invertible, a neat property that comes from non-singular matrices. To see why having pivots in all the columns or rows in the 
 RREF (Row-Reduced Echelon Form), you should check out the proof which Kyle does provide for anyone interested. I really want to avoid mixing between the course organization and the course content but it's hard. 
 Anyhow if the linear transformation is not bijective then the linear transformation will not be invertible but it may be left or right invertible. Similarly to how matrices might be left or right invertible (i.e. 
-$M_2M = I$ but $MM_2 \ne I$ or the converse where $M_2$ is some matrix that makes the matrix M left/right invertible). This is why $T(T^{-1}(w)) = v$ but T^{-1}(T(v)) \ne w$ can occur meaning the transformation does not 
+$M_2M = I$ but $MM_2 \ne I$ or the converse where $M_2$ is some matrix that makes the matrix M left/right invertible). This is why $T(T^{-1}(w)) = v$ but $T^{-1}(T(v)) \ne w$ can occur meaning the transformation does not 
 have an inverse transformation. Talking about invertible matrices, to find the inverse of a linear transformation, it is simply just finding the inverse of the matrix representation and then constructing (i.e. finding 
 the closed form) the linear transformation from the matrix representation.
 
@@ -332,7 +332,7 @@ The course then shifts gears to talk about dot products, norm, unit vectors and 
 existence but have no clue what they are when I was taking the course. If you are in Physics then you may have seen this before such as in PHYS1001 very briefly. In Physics when dealing with vectors, we need 
 to know whether or not the vectors are orthogonal which is when the dot product between two vectors is equal to 0. In this course, we don't define the dot product to be $AB\cos\theta$ (recall $\cos 90^\circ = 0$ as 
 we only care about if the two vectors are orthogonal and disregard the vector if they are not orthogonal to each other (i.e. we sum the product between each corresponding entries in the vectors: 
-$u \cdot v = u_1 v_1 + u2 v_2 + ... + u_n v_n$). What confused me about learning about norm is that I always thought the norm meant the perpendicular line. But in this course, it means the distance of the vector 
+$u \cdot v = u_1 v_1 + u_2 v_2 + ... + u_n v_n$). What confused me about learning about norm is that I always thought the norm meant the perpendicular line. But in this course, it means the distance of the vector 
 from the origin. From this point onwards, the course talks a great deal about the orthogonality of vectors and matrices. As stated earlier, two vectors are orthogonal if their dot products are 0 so by extension, an 
 orthogonal set is simply the set of vectors that are orthogonal. To check if a set is orthogonal, you just perform the dot product on each vector in the set which made me realize an interesting fact. The amount of times 
 you need to perform the dot product is simply ${n \choose 2}$, something you may have encountered in Highschool (I don't think I did) or in a probability course. But what is interesting about orthogonality? There are 
@@ -670,6 +670,6 @@ As for how I studied in the course, I did the following:
 * attended office hours to ask questions to either the TA or to Kyle
 * rewrite course notes
 * write cue cards and test myself the day or two before the test if I had the general idea on how to approach the problem or knew my theory
-* try all the lecture bonus problems relating to the test the day
+* try all the lecture bonus problems relating to the test
 * read over my course notes at least once before the test
 * avoid studying from the assignment questions, those questions are either long or difficult to be on the test
