[edit] Fix diagonalizable matrix representation

--- a/_posts/course-reviews/2022-08-25-math2107.md
+++ b/_posts/course-reviews/2022-08-25-math2107.md
@@ -252,7 +252,8 @@ A^{80} &= PD^{80}P^{-1} \\
 \lambda_1^{80} & 0 & 0 & ... & 0 \\
 0 & \lambda_2^{80} & 0 & ... & 0 \\
 0 & 0 & ... & 0 & 0 \\
-0 & 0 & ... & 0 & \lambda_n \\
+& & ... \\
+0 & 0 & ... & 0 & \lambda_n^{80} \\
 \end{bmatrix} P^{-1}
 \end{align*}$$
 
