[typo] Fix title of APS blog

--- a/_posts/programming/qnx/2022-04-17-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-17-qnx-aps.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: QNX - An Introduction to Adapative Partitioning Scheduler and How to Bankrupt Partitions
+title: QNX - An Introduction to Adaptive Partitioning Scheduler and How to Bankrupt Partitions
 description: A look into QNX APS feature
 categories: [programming, c/c++, aps, qnx]
 ---
