[edit] Resolve some latex typos

--- a/_posts/course-reviews/2022-04-30-math2052.md
+++ b/_posts/course-reviews/2022-04-30-math2052.md
@@ -165,7 +165,7 @@ times when it just doesn't register in my mind as it seemed unintuitive.
 Anyhow, I digress. The course concludes with the Taylor series and its applications. When power series was first introduced, the prof 
 posed a question to the class about how a calculator would calculate $e^x$ and answers the question by saying its relation to power series. 
 I think this was a good motivation to teach about power series but it did not immediately click to me how the professor came up with 
-the series (i.e. $1 + x + \frac{x^2}{2} + \frac{x^3}{6} \frac{x^4}{24} + ...$). That is where the Taylor series enters the scene. A Taylor 
+the series (i.e. $1 + x + \frac{x^2}{2} + \frac{x^3}{6} + \frac{x^4}{24} + ...$). That is where the Taylor series enters the scene. A Taylor 
 series can be seen as a special type of power series that represents some function (you can google The specific definition yourself 
 if you are curious). What is special about this section of the course is that students finally (at least explicitly) start to find 
 a power series representation (Taylor series) of common functions such as $\sin(x)$ and $e^x$ by first computing all order of derivatives 
@@ -175,7 +175,7 @@ from here on. The question the professor first posed to the students at the begi
 $e^x$, the first 5 or so terms (I don't remember the exact numbers) were good enough as an approximation. One of my initial reactions to this 
 statement was how did the professor know this. This idea of approximation was stuck in my head because last semester in PHYS1001 - Foundation of 
 Physics 1, the course ended with talking about the motion of a pendulum. Although I cannot recall much about Simple Pendulums, I recall when working 
-on problems relating to Simple Pendulums, we took the liberty of approximating $\sin(x)$ as x with a very tiny error for small angles (i.e. less than $15^\{circ}$). 
+on problems relating to Simple Pendulums, we took the liberty of approximating $\sin(x)$ as x with a very tiny error for small angles (i.e. less than $15^\circ$). 
 This is exactly what was taught in MATH2052, how to derive the Taylor series and the error if only the first n terms were used to 
 approximate the function. The course also goes over other applications of Taylor series such as computing the limits when it's in an 
 indeterminate form (i.e. $\frac{0}{0}$). One could use L'H&ocirc;pital Rule but it's not pleasant to rely on this method in certain circumstances because 
