[edit] Euler Formula

--- a/_posts/math-physics/2022-12-27-euler.md
+++ b/_posts/math-physics/2022-12-27-euler.md
@@ -99,10 +99,10 @@ Using the fact that $i^2 = -1$, we have the following:
 
 $$
 i^n = \begin{cases}
-1,  & \text{if $n=4k$} \\
-i,  & \text{if $n=4k+1$} \\
--1, & \text{if $n=4k+2$} \\
--i, & \text{if $n=4k+3$}
+1,  & \text{if $n\equiv 0 (mod 4)$} \\
+i,  & \text{if $n\equiv 1 (mod 4)$} \\
+-1, & \text{if $n\equiv 2 (mod 4)$} \\
+-i, & \text{if $n\equiv 3 (mod 4)$}
 \end{cases}\nonumber
 $$
 
