[edit] Euler Post with grammar and spelling partially fixed

--- a/_posts/math-physics/2022-12-27-euler.md
+++ b/_posts/math-physics/2022-12-27-euler.md
@@ -16,10 +16,10 @@ in the identity: $e^{i\pi}-1 = 0$ apparently makes it beautiful because it wraps
 To me personally, it seems like people treat it as the unifying equation in the sense that it isn't the theory of everything that ties every branch 
 of mathematics but is revered as if it is.
 
-What makes Euler Identity interesting to me isn't the mere fact of its existence but rather the appearance of $e^{i\pi}$ in the equation. What does it 
+What makes Euler's Identity interesting to me isn't the mere fact of its existence but rather the appearance of $e^{i\pi}$ in the equation. What does it 
 mean to raise e to the power if $i\pi$? In my entire undergraduate in Computer Science, I never once question that $e^{i\pi}=-1$. I just took it as a 
 fact that it comes from Euler's Formula: $e^{i\pi} = \cos\pi + i\sin\pi$ but never bothered questioning how Euler's formula came to be. I took 
-every fact in Mathematics in face-valued till I decided to study Mathematics more seriously.
+every fact in Mathematics face-valued till I decided to study Mathematics more seriously.
 
 ## Irrational Exponent?
 
@@ -63,17 +63,17 @@ I cannot even imagine how long it'll take to approximating $e^\pi$ to some large
 
 ## Complex Exponents
 
-One may recall from Highschool or in University that $i^2 = -1$. But what does it mean to take the exponent of an imaginary number. Is i even a number we can compare with? The idea of ordering imaginary numbers with real numbers 
-was a topic that confused me a lot last year. It was a random question that popped to my head. From my understanding, one cannot order imaginary numbers with real numbers as they lie in different dimension. If we were to imagine 
-the complex plane, the imaginary/complex axis lies on the vertical axis while the real number lies on the horizontal axis. The two axis only intersect on the origin (i.e. (x, y) = (0,0)).
+One may recall from Highschool or University that $i^2 = -1$. But what does it mean to take the exponent of an imaginary number? Is i even a number we can compare with? The idea of ordering imaginary numbers with real numbers 
+was a topic that confused me a lot last year. It was a random question that popped into my head. From my understanding, one cannot order imaginary numbers with real numbers as they lie in a different dimension. If we were to imagine 
+the complex plane, the imaginary/complex axis lies on the vertical axis while the real number lies on the horizontal axis. The two axes only intersect on the origin (i.e. (x, y) = (0,0)).
 
 Since complex numbers cannot be compared with real numbers, taking the exponent of complex numbers must differ from taking the exponent of real numbers. Geometrically, taking the exponent of a complex number just means a rotation 
 in the complex plane as seen from Euler's formula. But what about algebraically? How does one even derive Euler's formula?
 
 ## Euler's Formula
 
-Euler's formula states $e^{i\theta} = \cos\theta + i\sin\theta$. It's a bit mysterious where it comes from. But the answer lies in taking the Taylor Polynomial of e and use exponent laws to raise the taylor polynomial to $i\theta$.
-Although I missed out learning about Taylor Polynomials during my years studying Computer Science (I was supposed to learn it but we ran out of time), it turns out to be an extremely important concept. Hopefully, you are familiar with 
+Euler's formula states $e^{i\theta} = \cos\theta + i\sin\theta$. It's a bit mysterious where it comes from. But the answer lies in taking the Taylor Polynomial of e and using exponent laws to raise the Taylor polynomial to $i\theta$.
+Although I missed out on learning about Taylor Polynomials during my years studying Computer Science (I was supposed to learn it but we ran out of time), it turns out to be an extremely important concept. Hopefully, you are familiar with 
 Taylor Polynomials. If not, just think of it as an infinite series that converges to some known function. For instance, here are some taylor polynomials that are important to know (you don't need to memorize them, just accept it for now):
 
 * $e^x = \sum \limits_{n=0}^\infty \frac{x^n}{n!} = 1 + x + \frac{x^2}{2!} + \frac{x^3}{3!} + \frac{x^4}{4!} + \frac{x^5}{5!} + ...$
@@ -129,11 +129,11 @@ e^{i\theta} &= \color{#7CB300}{1} + \color{#B06103}{i\theta} + \color{#7CB300}{\
 \end{align*}
 $$
 
-We started off with a taylor polynomial of $e^{i\theta}$ and derived the Euler's Formula. How neat is this. All it requires is knowledge of first year Math to be able to derive Euler's formula.
+We started with a Taylor polynomial of $e^{i\theta}$ and derived Euler's Formula. How neat is this. All it requires is knowledge of first-year Math to be able to derive Euler's formula.
 
 ## Conclusion
 
-Taking the exponent of a complex number is simply subsituting the exponent to the taylor series which is equivalent to the Euler's Formula. Since complex numbers are not along the real axis, we do treat the complex exponents 
-differently. Instead of repeated multiplications, we compute the taylor polynomial (or simply use the Euler's Formula). 3Blue1Brown made a good video about this topic that you should check out: [https://www.youtube.com/watch?v=v0YEaeIClKY](https://www.youtube.com/watch?v=v0YEaeIClKY). I was just motivated to take a look since it was a question that was lingering on my mind for over a month and I happen to come across the topic again when I was reading Math Girl's: Fermat's Last Theorem just a few hours ago of writing this blog.
+Taking the exponent of a complex number is simply substituting the exponent to the Taylor series which is equivalent to Euler's Formula. Since complex numbers are not along the real axis, we do treat the complex exponents 
+differently. Instead of repeated multiplications, we compute the Taylor polynomial (or simply use Euler's Formula). 3Blue1Brown made a good video about this topic that you should check out: [https://www.youtube.com/watch?v=v0YEaeIClKY](https://www.youtube.com/watch?v=v0YEaeIClKY). I was just motivated to take a look since it was a question that was lingering on my mind for over a month and I happen to come across the topic again when I was reading Math Girl's: Fermat's Last Theorem just a few hours ago of writing this blog.
 
 
